Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-30317

Changing .md to .txt file does not refresh editor

XMLWordPrintable

    • 403f5daf3 (master)

      When there is a .txt or .md file in the project, opening it brings up the plaintext or .md editor respectively.

      If you change the file extension from the project view to the other type while the file is open, the editor stays the same editor used when the file was initially opened. 

      Only when you close and reopen the file will the editor for the correct version open.

        For Gerrit Dashboard: QTCREATORBUG-30317
        # Subject Branch Project Status CR V

            con Eike Ziller
            kevin.zhang Kevin Zhang
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes